# AirbagsCV

./: .gitignore  Airbag Defect Detection PoC Analysis.txt  Airbag Fabric Inspection Hardware PoC.txt  First-deepresesarch.md  README.md  pyproject.toml  requirements-colab.txt  requirements-dev.txt  requirements.txt
demo/: app.py  inference.py
docs/artifacts/: honest_audit_report.md  implementation_plan.md  project_analysis.md  project_analysis_arabic_version.md  task.md  walkthrough.md
docs/experiments/: PATCHCORE_AITEX_CORESET_REPORT.md
notebooks/: COLAB_GUIDE.md  train_colab.ipynb
results/: benchmark_results.csv
scripts/: benchmark_inference.py  export_models.py  generate_synthetic_defects.py  prepare_aitex.py  run_cold_start_ablation.py  smoke_test.py  train_models.py  train_proxy_baselines.py
tests/: test_efficientad_regression.py  test_smoke.py
