[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "airbagscv"
version = "0.1.0"
description = "Proof-of-concept anomaly detection for airbag fabric defects (AITEX proxy)."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "AirbagsCV contributors" }]
keywords = ["anomaly-detection", "computer-vision", "fabric-inspection", "anomalib"]

dependencies = [
    "anomalib==2.0.0",
    "gradio==4.44.1",
    "matplotlib==3.9.2",
    "seaborn==0.13.2",
    "pandas==2.2.3",
    "opencv-python==4.10.0.84",
    "Pillow==10.4.0",
    "scikit-learn==1.5.2",
    "numpy==1.26.4",
    "tqdm==4.66.5",
]

[project.optional-dependencies]
dev = [
    "ruff==0.6.9",
    "black==24.10.0",
    "pytest==8.3.3",
]

[project.urls]
Repository = "https://github.com/MohamedAzzam4/AirbagsCV"

[tool.setuptools]
# This is not a packaged library; scripts/ and demo/ are run directly.
py-modules = []

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]  # let black handle line length

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"'). Used for EfficientAD regression test that takes ~3-6 minutes on CPU.",
]
